sis_sources/tests/errors/zero_falsy.sis
pin x = 0;
if (x) { print("not zero"); } else { print("was zero"); }
